Ajuste no projeto para compilar no jenkins